# axum-mcp

./: Cargo.toml
src/: counter.rs  main.rs
