[package]
name = "axum-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
tokio = { version = "1.45.0" , features = ["full"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
