[package]
name = "axum-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rmcp = { path="../rust-sdk/crates/rmcp" , features = ["server", "transport-sse-server", "transport-streamable-http-server"] }
tokio = { version = "1.45.0" , features = ["full"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
futures = "0.3.31"
